--- a/README.rdoc
+++ b/README.rdoc
@@ -1,34 +1,34 @@
-== README
+== README file for Benjam project Rails implementation
 
-== Pushing to heroku
-1) heroku git:remote -a benjam
+== Pushing to Heroku
+ 1) heroku git:remote -a benjam
 this adds a heroku remote to your local repo
-2) git push heroku master
+ 2) git push heroku master
 this pushes your current master into heroku 
 
-if you need to run migrations 
-3) heroku run rake db:migrate
-4) heroku restart
-5) heroku restart
+If you need to run migrations...
+ 3) heroku run rake db:migrate
+ 4) heroku restart
+ 5) heroku restart
 
-andd all should be well
+and all should be well
 
-if you need to reset your database
+if you need to reset your database...
 
-1) heroku config | grep POSTGRESQL 
+ 1) heroku config | grep POSTGRESQL 
 gets the database URL
 this currently gives you back
 
 HEROKU_POSTGRESQL_AMBER_URL: postgres://ccegxhzwtuqwbm:LXCp2jSsZenJFEqDzNckjC08f_@ec2-54-197-227-238.compute-1.amazonaws.com:5432/ddc5ii2ptts3us
 
-2)heroku pg:reset HEROKU_POSTGRESQL_AMBER_URL
+ 2) heroku pg:reset HEROKU_POSTGRESQL_AMBER_URL
 
-3) heroku run rake db:migrate
-4) heroku run db:seed
-4) heroku restart
+ 3) heroku run rake db:migrate
+ 4) heroku run db:seed
+ 4) heroku restart
 
 
-== Initial Dev Setup
+== Initial Development Setup
 
   $ rvm use 2.0.0
   $ bundle install
